<resources>
    <string name="app_name">Film\'s catalog</string>
    <!-- Film 1-->
    <string name="film_title_1">Берсерк. Золотой век: Фильм III. Сошествие</string>
    <string name="film_description_1">Ни возвращение Гатса в отряд Соколов, ни освобождение Гриффитса не приносят облегчения: истерзанный пытками Гриффитс - теперь лишь тень прежнего себя, а члены отряда, когда-то переживавшие вместе труднейшие времена, теперь готовы пойти разными дорогами. Однако дух иногда сломить гораздо труднее, чем плоть: мечты и стремления великого некогда человека приобретают, преломляясь сквозь возможности самых сильных мира сего, черные крылья ужаса и боли. Грядет Затмение, и вместе с ним приближается самая главная битва.</string>

    <!-- Film 2-->
    <string name="film_title_2">Принцесса Мононоке</string>
    <string name="film_description_2">Убив вепря, юный принц Аситака навлек на себя смертельное проклятие. Старая знахарка предсказала, что только он сам способен изменить свою судьбу, и отважный воин отправился в опасное путешествие. Так он оказался в загадочной стране, где люди под предводительством злой госпожи Эбоси воевали с обитателями леса: духами, демонами и гигантскими существами, каких Аситака раньше никогда не видел.\n И была с ними принцесса Мононоке - повелительница зверей и дочь волчицы. Теперь судьба всех зависит только от одного воина - принца Аситаки.</string>

    <!-- Film 3-->
    <string name="film_title_3">Триган: Переполох в Пустошах</string>
    <string name="film_description_3">Макка - город в пустыне. По слухам на город положил глаз знаменитый грабитель Газбэк, поэтому мэр Макка нанял охотников за вознаграждениями охранять город. Мерил и Милли также приехали сюда как страховые агенты чтобы контролировать ущерб. Где-то рядом и Вэш-Ураган с охотницей Амелией и Николасом Д. Вульфудом.</string>

    <!-- Film 4-->
    <string name="film_title_4">Унесённые призраками</string>
    <string name="film_description_4">Тихиро с мамой и папой переезжают в новый дом. Заблудившись по дороге, они оказываются в странном пустынном городе, где их ждет великолепный пир. Родители с жадностью набрасываются на еду и к ужасу девочки превращаются в свиней, став пленниками злой колдуньи Юбабы. Теперь, оказавшись одна среди волшебных существ и загадочных видений, Тихиро должна придумать, как избавить своих родителей от чар коварной старухи.</string>

    <!-- Film 5-->
    <string name="film_title_5">Мой сосед Тоторо</string>
    <string name="film_description_5">Сестры Сацуки и Мэй переезжают вместе с папой в деревенский дом. Однажды девочки обнаруживают, что по соседству с ними живут лесные духи — хранители леса во главе со своим могущественным, но добрым повелителем Тоторо. Постепенно Тоторо становится другом девочек, помогая им в их повседневных приключениях.</string>

    <!-- Film 6-->
    <string name="film_title_6">Тетрадь смерти</string>
    <string name="film_description_6">Старшекласснику Лайту Ягами в руки попадает тетрадь синигами Рюка. Каждый человек, чьё имя записать в эту тетрадку, умрёт, поэтому Лайт решает бороться со злом на земле.</string>

    <string name="default_film_title">Default film\'s name</string>
    <string name="btn_detail_text">Details</string>
    <string name="share_text">I invite you to the \"Film catalog\" application, it will soon be available on Google play</string>
    <string name="empty_favourites_list_text">Favourites list is empty</string>
    <string name="favourites_title_text">Favourites</string>
    <string name="dialog_yes_exit_text">Yes, exit</string>
    <string name="dialog_no_exit_text">No</string>
    <string name="dialog_title_text">Are you sure you want to get out?</string>
    <string name="info_title_text">App Info</string>
    <string name="some_info_text">This will be some info about this app</string>
    <string name="btn_share_text">Share App</string>
    <string name="bottom_menu_home_text">Home</string>
    <string name="bottom_menu_favourites_text">Favourites</string>
    <string name="bottom_menu_info_text">Info</string>
    <string name="was_deleted_str">was deleted</string>
    <string name="cancel_snackbar_str">cancel</string>
</resources>